--- a/master-parser/Cargo.toml
+++ b/master-parser/Cargo.toml
@@ -17,6 +17,8 @@ zstd = "0.11.2"
 
 [profile.release]
 debug = false
+codegen-units = 1
+lto = true
 
 [build]
 rustflags = ["-C", "target-cpu=native"]
