--- a/rankpoints/package.json
+++ b/rankpoints/package.json
@@ -7,11 +7,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "furo",
   "license": "ISC",
   "dependencies": {
     "better-sqlite3": "^8.0.1",
-    "dotenv": "^16.0.1",
-    "mariadb": "^3.0.0"
+    "dotenv": "^16.0.1"
   }
 }
