--- a/master-parser/Cargo.toml
+++ b/master-parser/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 chrono = "0.4.22"
 rusqlite = "0.30.0"
 serde = { version = "1.0.147", features = ["derive"] }
+serde_with = "3.4.0"
 serde_json = "1.0.87"
 simd-json = "0.13.6"
 tar = "0.4.38"
