--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
-PORT=12345
 DATABASE_URL=postgres://user:password@host:port/database
 DATABASE_MAX_CONNECTIONS=50
 DATABASE_MIN_CONNECTIONS=1
 NUM_WORKERS=6
+DDSTATS_WEB_PATH=../ddstats-web/
